[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/WorldGen.gd" type="Script" id=1]
[ext_resource path="res://Tilesets/TerrainTileset.tres" type="TileSet" id=2]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=4]
[ext_resource path="res://Scripts/TerrainTileMap.gd" type="Script" id=5]
[ext_resource path="res://Scripts/SelectionBox.gd" type="Script" id=6]
[ext_resource path="res://Assets/selection_box.png" type="Texture" id=7]
[ext_resource path="res://Scripts/BuildingTileMap.gd" type="Script" id=8]
[ext_resource path="res://Scripts/TreeTileMap.gd" type="Script" id=9]
[ext_resource path="res://Scripts/ResourceBar.gd" type="Script" id=10]
[ext_resource path="res://Fonts/Inspyratta/Inspyratta.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Scripts/Buildings.gd" type="Script" id=12]
[ext_resource path="res://Scripts/Dock.gd" type="Script" id=13]

[sub_resource type="TileSet" id=2]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 11 )

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="WorldGen" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="TerrainTileMap" type="TileMap" parent="WorldGen"]
mode = 1
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0 )
script = ExtResource( 5 )

[node name="BuildingTileMap" type="TileMap" parent="WorldGen"]
mode = 1
tile_set = SubResource( 2 )
cell_size = Vector2( 64, 32 )
format = 1
script = ExtResource( 8 )

[node name="TreeTileMap" type="TileMap" parent="WorldGen"]
format = 1
script = ExtResource( 9 )

[node name="SelectionBox" type="Sprite" parent="."]
texture = ExtResource( 7 )
offset = Vector2( 0, 16 )
script = ExtResource( 6 )

[node name="Player" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="ResourceBar" type="ColorRect" parent="UILayer"]
margin_right = 1280.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 0.278431 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grain" type="Label" parent="UILayer/ResourceBar"]
margin_left = 18.0
margin_top = 9.0
margin_right = 210.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "Grain - 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wood" type="Label" parent="UILayer/ResourceBar"]
margin_left = 157.0
margin_top = 9.0
margin_right = 349.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "Wood - 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Labor" type="Label" parent="UILayer/ResourceBar"]
margin_left = 298.418
margin_top = 9.0
margin_right = 490.418
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "Labor - 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dock" type="ColorRect" parent="UILayer"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -40.0
margin_right = 640.0
color = Color( 0, 0, 0, 0.278431 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildMode" type="Label" parent="UILayer/Dock"]
margin_left = 18.0
margin_top = 9.0
margin_right = 210.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "Grain - 2090"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buildings" type="Node2D" parent="."]
script = ExtResource( 12 )
[connection signal="update_dock" from="Player" to="UILayer/Dock" method="_on_Player_update_dock"]
[connection signal="update_resource_bar" from="Player" to="UILayer/ResourceBar" method="_on_Player_update_resource_bar"]
